5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/1165/executions/1573_1332.log
== TEST (2019-03-18 13:01:48) 
-- CODE:
aresta = (5) ** 2
area = (3/2)* (sqrt(3)*aresta)

print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (3/2)* (sqrt(3)*aresta)
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 13:02:49) 
-- CODE:
from math import *
aresta = (5) ** 2
area = (3/2)* (sqrt(3)*aresta)

print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 13:03:02) 
-- CODE:
from math import *
aresta = (5) ** 2
area = (3/2)* (sqrt(3)*aresta)

print(round(area, 4))
-- EXECUTION TIME:
0.158422
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
